--- a/LupsyApp/app/src/main/res/values/themes.xml
+++ b/LupsyApp/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.LupsyApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <style name="Base.Theme.LupsyApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+        <item name="colorPrimary">@color/preto_fosco</item>
     </style>
 
+
     <style name="Theme.LupsyApp" parent="Base.Theme.LupsyApp" />
+
+
+    <style name="Theme.LupsyApp.NoActionBar" parent="Base.Theme.LupsyApp">
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
