Criação de item e como vai estar o layout deles, + filtro imagem

--- a/LupsyApp/app/src/main/res/values/colors.xml
+++ b/LupsyApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="preto_fosco">#1B1B1B</color>
+    <color name="amarelo_seco">#D5DBD5BE</color>
+    <color name="fundo_amarelo_seco">#39DBD5BE</color>
 </resources>
