--- a/LupsyApp/app/src/main/res/layout/activity_login.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_login.xml
@@ -11,20 +11,20 @@
     tools:context=".LoginActivity">
 
     <View
-        android:id="@+id/view2"
+        android:id="@+id/vSpacing"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="0.4" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivLogo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         app:srcCompat="@drawable/logotipo" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/tvEmail"
@@ -45,13 +45,13 @@
         android:paddingStart="10dp" />
 
     <View
-        android:id="@+id/view4"
+        android:id="@+id/vSpacing2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.05" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/tvPassword"
@@ -89,7 +89,7 @@
         app:cornerRadius="10dp" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/vSpacing3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="0.5" />
