--- a/LupsyApp/app/src/main/res/layout/activity_main.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_main.xml
@@ -121,61 +121,19 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/editborderitem"
-            android:ems="10"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:srcCompat="@drawable/imgspacer" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <View
-                    android:id="@+id/view6"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.1" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.2"
-                    android:text="@string/tvNome"
-                    android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/view7"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.05" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:text="@string/tvDescricao" />
-            </LinearLayout>
-
-        </LinearLayout>
-
         <View
             android:id="@+id/view8"
             android:layout_width="wrap_content"
             android:layout_height="20dp" />
 
     </LinearLayout>
+
+    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/activity_barra_inferior_menu"
+        app:labelVisibilityMode="unlabeled" />-->
 
 </LinearLayout>
