--- a/LupsyApp/app/src/main/res/menu/activity_barra_inferior_menu.xml
+++ b/LupsyApp/app/src/main/res/menu/activity_barra_inferior_menu.xml
@@ -1,4 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/nav_favoritos"
+        android:icon="@drawable/ic_estrela1"
+        android:title="@string/favoritos" />
+
+    <item
+        android:id="@+id/nav_loja"
+        android:icon="@drawable/ic_mala1"
+        android:title="@string/loja" />
+
+    <item
+        android:id="@+id/nav_lupa"
+        android:icon="@drawable/ic_lupa1"
+        android:title="@string/pesquisa" />
+
+    <item
+        android:id="@+id/nav_cart"
+        android:icon="@drawable/ic_cart1"
+        android:title="@string/carrinho" />
+
+    <item
+        android:id="@+id/nav_perfil"
+        android:icon="@drawable/ic_perfil1"
+        android:title="@string/perfil" />
+
 </menu>
