--- a/LupsyApp/app/src/main/res/layout/activity_login.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
         android:paddingStart="10dp" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -89,9 +89,43 @@
         app:cornerRadius="10dp" />
 
     <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvNConta"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:gravity="right"
+            android:text="@string/NConta" />
+
+        <TextView
+            android:id="@+id/tvConta"
+            android:onClick="onClickCadastro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:clickable="true"
+            android:gravity="left"
+            android:linksClickable="true"
+            android:text="@string/Conta"
+            android:textColor="@color/cadastro"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <View
         android:id="@+id/vSpacing3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="0.5" />
+        android:layout_weight="0.3" />
 
 </LinearLayout>
