--- a/LupsyApp/app/src/main/res/values/colors.xml
+++ b/LupsyApp/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="preto_fosco">#1B1B1B</color>
     <color name="amarelo_seco">#D5DBD5BE</color>
     <color name="fundo_amarelo_seco">#39DBD5BE</color>
+    <color name="cadastro">#D4D4D4</color>
 </resources>
