--- a/LupsyWeb/frontend/web/css/view_user.css
+++ b/LupsyWeb/frontend/web/css/view_user.css
@@ -15,6 +15,12 @@
     color: #333;
 
 }
+.actions {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
 
 .details-container {
     display: flex;
@@ -38,6 +44,8 @@
 }
 
 .image-container {
+    display: flex;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
