alterações main.php & css

--- a/LupsyWeb/frontend/web/css/view_cerveja.css
+++ b/LupsyWeb/frontend/web/css/view_cerveja.css
@@ -57,6 +57,10 @@
 
 .detail-content {
     color: #333;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    max-width: 25ch;
 }
 
 .image-container {
