--- a/LupsyWeb/frontend/web/css/view_cerveja.css
+++ b/LupsyWeb/frontend/web/css/view_cerveja.css
@@ -2,13 +2,13 @@
 
 
 .custom-view {
-    max-width: 40%;
+    max-width: 50%;
     margin: 0 auto;
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 1%;
+
 }
 
 .view-title {
@@ -18,6 +18,7 @@
     margin-bottom: 20px;
     color: #333;
 }
+
 
 .actions {
     display: flex;
@@ -34,6 +35,7 @@
 
 .detail-nome{
     display:flex;
+    justify-content: center;
     margin-top: 10%;
     font-weight: 600;
     font-family: "Suranna", serif;
@@ -77,7 +79,6 @@
     font-family: "SansSerif", serif;
     font-size: 20px;
     color: #808080;
-    margin-bottom: 10%;
 }
 
 .card-side-by-side {
@@ -105,22 +106,22 @@
 
 .rating {
     direction: ltr;
-    font-size: 2em;
+    font-size: 1.5em;
     color: #d3d3d3;
     cursor: pointer;
 }
 
 .rating .star {
-    padding: 0 10px;
+    padding: 0 5px;
     transition: color 0.3s ease;
 }
 
 .rating .star.selected {
-    color: #FFD700; /* Cor dourada das estrelas selecionadas */
+    color: #FFD700;
 }
 
 .rating .star:hover {
-    color: #ffcc00; /* Cor de destaque nas estrelas ao passar o mouse */
+    color: #ffcc00;
 }
 
 .btn-warning {
@@ -167,4 +168,79 @@
 }
 .icon {
     margin-bottom: 10%;
+    margin-left: 15%;
+}
+.text-center{
+    font-size:  20px;
+}
+.align-items-center{
+    gap:1em;
+}
+
+.title-c{
+    font-size: 20px;
+    margin-left: 8px;
+}
+
+.btn-send {
+    font-family: inherit;
+    font-size: 20px;
+    background: goldenrod;
+    color: #ffffff;
+    padding: 0.5em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.btn-send span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+}
+
+.btn-send svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.btn-send:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+.btn-send:hover svg {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+.btn-send:hover span {
+    transform: translateX(5em);
+}
+
+.btn-send:active {
+    transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+    from {
+        transform: translateY(0.1em);
+    }
+
+    to {
+        transform: translateY(-0.1em);
+    }
+}
+
+.nome-comment{
+    font-size: 16px;
+    font-weight: bold;
+    color: #4e4e4e;
+}
+
+.list-group-item{
+    border-radius: 1em !important;
 }
