--- a/LupsyApp/app/src/main/res/layout/activity_singup.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_singup.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CadastroActivity">
+    tools:context=".SignUpActivity">
 
     <View
         android:id="@+id/vSpacing"
@@ -106,7 +106,7 @@
         android:backgroundTint="#1B1B1B"
         android:insetTop="10dp"
         android:insetRight="15dp"
-        android:onClick="onClickCadastro"
+        android:onClick="onClickSignUp"
         android:paddingLeft="30dp"
         android:paddingTop="20dp"
         android:paddingRight="30dp"
