--- a/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
+++ b/LupsyApp/app/src/main/res/layout/item_lista_cerveja.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@drawable/editborderitem">
+    android:layout_height="100dp"
+    android:background="@drawable/editborderitem"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imgCapa"
@@ -27,15 +27,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvNomeCev"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="@string/tvNome"
+                android:layout_weight="0.3"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
         <View
             android:id="@+id/vMeio"
             android:layout_width="match_parent"
-            android:layout_height="5dp" />
+            android:layout_height="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,16 +53,12 @@
 
             <TextView
                 android:id="@+id/tvDescCev"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/tvDescricao" />
+                android:layout_weight="0.7"
+                android:text="" />
         </LinearLayout>
 
-        <View
-            android:id="@+id/view9"
-            android:layout_width="match_parent"
-            android:layout_height="15dp" />
 
     </LinearLayout>
 </LinearLayout>
