criação simples dos modelos do Utilizador e da Cerveja

--- a/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_perfil.xml
@@ -8,7 +8,7 @@
     android:background="@color/fundo_amarelo_seco"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".PerfilActivity">
+    tools:context=".PerfilFragment">
 
     <!-- Profile Section -->
     <LinearLayout
