alterações de bugs indesejados frontend + css + breadcrumbs por páginas

--- a/LupsyWeb/frontend/web/css/index_fatura.css
+++ b/LupsyWeb/frontend/web/css/index_fatura.css
@@ -13,10 +13,10 @@
     justify-content: center;
 }
 
-.table > thead a{
+.table > thead a {
     text-decoration: none;
     text-underline: none;
-    color: white;
+    color: black;
 }
 
 .table {
