--- a/LupsyApp/app/src/main/res/values/colors.xml
+++ b/LupsyApp/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="amarelo_seco">#D5DBD5BE</color>
     <color name="fundo_amarelo_seco">#39DBD5BE</color>
     <color name="cadastro">#D4D4D4</color>
+    <color name="branco_sujo">#E1E1E1</color>
 </resources>
