--- a/LupsyApp/app/src/main/res/layout/activity_login.xml
+++ b/LupsyApp/app/src/main/res/layout/activity_login.xml
@@ -84,6 +84,7 @@
         android:paddingTop="20dp"
         android:paddingRight="30dp"
         android:paddingBottom="20dp"
+        android:textColor="@color/branco_sujo"
         android:text="@string/BtnEntrar"
         android:textSize="20sp"
         app:cornerRadius="10dp" />
