--- a/LupsyApp/app/src/main/res/layout/fragment_carrinho.xml
+++ b/LupsyApp/app/src/main/res/layout/fragment_carrinho.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/fundo_amarelo_seco"
+    android:background="@color/fundo_amarelo_seco"
     android:orientation="vertical"
     tools:context=".CarrinhoFragment">
 
@@ -19,7 +19,7 @@
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="22dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
